--- a/AssistantListing_ObliClean_InProgress.ipynb
+++ b/AssistantListing_ObliClean_InProgress.ipynb
@@ -6,7 +6,7 @@
       "name": "AssistantListing-ObliClean-InProgress.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM0IB+RVJbiEaBox3dfV8/v",
+      "authorship_tag": "ABX9TyNgzSF+HNxjxSYizksk9phB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,21 +64,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8b4e49f-9e8f-4353-fc5c-5631c33e4ad7"
+        "outputId": "c0094358-2d89-4db7-87d9-279c822b9c5d"
       },
       "source": [
         "import pandas as pd\n",
         "import re\n",
         "\n",
         "filename = input(\"Enter name of input file (including the file extension):\")\n",
-        "data = pd.read_csv(filename)"
+        "data = pd.read_csv(filename, encoding='cp1252')"
       ],
-      "execution_count": 81,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Enter name of input file (including the file extension):AssistanceListings_DataGov_PUBLIC_WEEKLY_20210213 - AssistanceListings_DataGov_PUBLIC_WEEKLY_20210213.csv\n"
+            "Enter name of input file (including the file extension):AssistanceListings_DataGov_PUBLIC_WEEKLY_20210320.csv\n"
           ],
           "name": "stdout"
         }
@@ -103,7 +103,7 @@
         "obligations_colname = [col for col in colnames if re.findall(r'Obligation', col)][0]\n",
         "obligations = data[obligations_colname]"
       ],
-      "execution_count": 82,
+      "execution_count": 190,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
         "  else:\n",
         "    types.append('None')"
       ],
-      "execution_count": 83,
+      "execution_count": 191,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "    type1 = list(dict.fromkeys(type1))\n",
         "    types_dedup.append(type1)"
       ],
-      "execution_count": 84,
+      "execution_count": 192,
       "outputs": []
     },
     {
@@ -154,7 +154,7 @@
       "source": [
         "data['Obligation Types'] = types_dedup"
       ],
-      "execution_count": 85,
+      "execution_count": 193,
       "outputs": []
     },
     {
@@ -175,7 +175,7 @@
         "def listToStringWithoutBrackets(list1):\n",
         "    return str(list1).replace('[','').replace(']','').replace(\"'\",\"\")"
       ],
-      "execution_count": 86,
+      "execution_count": 194,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "  res = listToStringWithoutBrackets(data['Obligation Types'][i])\n",
         "  Obli_types.append(res)"
       ],
-      "execution_count": 87,
+      "execution_count": 195,
       "outputs": []
     },
     {
@@ -200,7 +200,7 @@
       "source": [
         "data['Obligation Types'] = Obli_types"
       ],
-      "execution_count": 88,
+      "execution_count": 196,
       "outputs": []
     },
     {
@@ -215,7 +215,7 @@
         "newdf = pd.DataFrame(data=datalist, columns=cols) \n",
         "data = pd.concat([data, newdf], axis=1) "
       ],
-      "execution_count": 89,
+      "execution_count": 197,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         "#for col in data[cols]:\n",
         "    #data.loc[mask[col], col] = ''"
       ],
-      "execution_count": null,
+      "execution_count": 188,
       "outputs": []
     },
     {
@@ -247,9 +247,9 @@
         "id": "wJhvZUs9cY-S"
       },
       "source": [
-        "obli1 = data['Obligations (122)'].str.split(')', expand=True)"
+        "obli1 = obligations.str.split(')', expand=True)"
       ],
-      "execution_count": 90,
+      "execution_count": 198,
       "outputs": []
     },
     {
@@ -274,7 +274,7 @@
         "      val.append('')\n",
         "  df.insert(i, i, val, True) \n"
       ],
-      "execution_count": 91,
+      "execution_count": 199,
       "outputs": []
     },
     {
@@ -285,7 +285,7 @@
       "source": [
         "df = df.applymap(str)"
       ],
-      "execution_count": 92,
+      "execution_count": 200,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
         "        text = text.replace(\"- ']\", \"\")\n",
         "    return text"
       ],
-      "execution_count": 94,
+      "execution_count": 201,
       "outputs": []
     },
     {
@@ -316,7 +316,19 @@
         "  df[i] = df[i].apply(remove_punctuations)\n",
         "  i +=1"
       ],
-      "execution_count": 95,
+      "execution_count": 202,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l5oHytO63mTL"
+      },
+      "source": [
+        "e1 = df[1][0].replace('$', ';')\n",
+        "e1 = e1.split(';')"
+      ],
+      "execution_count": 203,
       "outputs": []
     },
     {
@@ -326,49 +338,59 @@
       },
       "source": [
         "for j in range(maxlen):\n",
-        "  FY19 = []\n",
-        "  FY20 = []\n",
-        "  FY20_Flag = []\n",
-        "  FY21 = []\n",
-        "  FY21_Flag = []\n",
+        "  FY1 = []\n",
+        "  FY2 = []\n",
+        "  FY2_Flag = []\n",
+        "  FY3 = []\n",
+        "  FY3_Flag = []\n",
         "  name = 'Obligation'+str(j)\n",
+        "  pattern1 = e1[0] + '\\$[^\\]]+[.%]?'\n",
+        "  pattern2 = e1[2].lstrip() + '\\$[^\\]]+[.%]?'\n",
+        "  pattern2_1 = re.sub(' est', '', e1[2]).strip() + '\\$[^\\]]+[.%]?'\n",
+        "  pattern3 = e1[4].lstrip() + '\\$[^\\]]+[.%]?'\n",
+        "  pattern3_1 = re.sub(' est', '', e1[4]).strip() + '\\$[^\\]]+[.%]?'\n",
+        "  rep1 = e1[0]+'$'\n",
+        "  rep2 = re.sub(' est', '', e1[2]).strip() + '$'\n",
+        "  rep3 = e1[2].lstrip()+'$'\n",
+        "  rep4 = re.sub(' est', '', e1[4]).strip() + '$'\n",
+        "  rep5 = e1[4].lstrip()+'$'\n",
         "  for i in range(len(df[j])):  \n",
-        "    a = re.findall(r'FY 19\\$[^\\]]+[.%]?',df[j+1][i])\n",
-        "    b = re.findall(r'FY 20\\$[^\\]]+[.%]?',df[j+1][i])\n",
-        "    c = re.findall(r'FY 20 est \\$[^\\]]+[.%]?', df[j+1][i])\n",
-        "    d = re.findall(r'FY 21\\$[^\\]]+[.%]?',df[j+1][i])\n",
-        "    e = re.findall(r'FY 21 est \\$[^\\]]+[.%]?', df[j+1][i])\n",
+        "    a = re.findall(pattern1,df[j+1][i])\n",
+        "    b = re.findall(pattern2_1,df[j+1][i])\n",
+        "    c = re.findall(pattern2, df[j+1][i])\n",
+        "    d = re.findall(pattern3_1,df[j+1][i])\n",
+        "    e = re.findall(pattern3, df[j+1][i])\n",
         "    if a :\n",
-        "      FY19.append(a[0].split(';')[0].replace('FY 19$',''))\n",
+        "      FY1.append(a[0].split(';')[0].replace(rep1,''))\n",
         "    else:\n",
-        "      FY19.append('')\n",
+        "      FY1.append('')\n",
         "    if b:\n",
-        "      FY20.append(b[0].split(';')[0].replace('FY 20$',''))\n",
-        "      FY20_Flag.append(0)\n",
+        "      FY2.append(b[0].split(';')[0].replace(rep2,''))\n",
+        "      FY2_Flag.append(0)\n",
         "    elif c:\n",
-        "      FY20.append(c[0].split(';')[0].replace('FY 20 est $',''))\n",
-        "      FY20_Flag.append(1)\n",
+        "      FY2.append(c[0].split(';')[0].replace(rep3,''))\n",
+        "      FY2_Flag.append(1)\n",
         "    else:\n",
-        "      FY20.append('')\n",
-        "      FY20_Flag.append('')\n",
+        "      FY2.append('')\n",
+        "      FY2_Flag.append('')\n",
         "    \n",
         "    if d:\n",
-        "      FY21.append(d[0].split(';')[0].replace('FY 21$',''))\n",
-        "      FY21_Flag.append(0)\n",
+        "      FY3.append(d[0].split(';')[0].replace(rep4,''))\n",
+        "      FY3_Flag.append(0)\n",
         "    elif e:\n",
-        "      FY21.append(e[0].split(';')[0].replace('FY 21 est $',''))\n",
-        "      FY21_Flag.append(1)\n",
+        "      FY3.append(e[0].split(';')[0].replace(rep5,''))\n",
+        "      FY3_Flag.append(1)\n",
         "    else:\n",
-        "      FY21.append('')\n",
-        "      FY21_Flag.append('')\n",
+        "      FY3.append('')\n",
+        "      FY3_Flag.append('')\n",
         "\n",
-        "  data.insert(data.columns.get_loc(name) + 1, 'FY21_Flag'+ str(j), FY21_Flag)\n",
-        "  data.insert(data.columns.get_loc(name) +1, 'FY21_'+ str(j), FY21)\n",
-        "  data.insert(data.columns.get_loc(name) +1, 'FY20_Flag'+ str(j), FY20_Flag)\n",
-        "  data.insert(data.columns.get_loc(name) +1, 'FY20_'+ str(j), FY20)\n",
-        "  data.insert(data.columns.get_loc(name) +1, 'FY19_'+ str(j), FY19)"
+        "  data.insert(data.columns.get_loc(name) + 1, rep4.strip('$')+ '_Flag_' + str(j), FY3_Flag)\n",
+        "  data.insert(data.columns.get_loc(name) +1, rep4.strip('$') + '_' + str(j), FY3)\n",
+        "  data.insert(data.columns.get_loc(name) +1, rep2.strip('$') +'_Flag_' + str(j), FY2_Flag)\n",
+        "  data.insert(data.columns.get_loc(name) +1, rep2.strip('$')+ '_' + str(j), FY2)\n",
+        "  data.insert(data.columns.get_loc(name) +1, rep1.strip('$')+ '_' + str(j), FY1)"
       ],
-      "execution_count": 98,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -379,12 +401,12 @@
           "height": 35
         },
         "id": "93Jp_ynSgYAI",
-        "outputId": "27a8b4aa-d60f-4c43-f947-a5ba2554311e"
+        "outputId": "004542dc-b5b0-44c0-9cfd-dc2811d9e2b8"
       },
       "source": [
         "filename"
       ],
-      "execution_count": 100,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 100
+          "execution_count": 170
         }
       ]
     },
@@ -411,7 +433,7 @@
       "source": [
         "reference_Data = re.findall('\\d+', filename)[0]"
       ],
-      "execution_count": 107,
+      "execution_count": 171,
       "outputs": []
     },
     {
@@ -422,93 +444,19 @@
       "source": [
         "data['Reference_Date'] = reference_Data"
       ],
-      "execution_count": 108,
+      "execution_count": 172,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "qhS827qUxcR3",
-        "outputId": "edf9fdc3-d72b-413a-e9ed-595ddf773ea8"
+        "id": "qhS827qUxcR3"
       },
       "source": [
         "data.to_csv('AssistanceListingFinal.csv')"
       ],
-      "execution_count": 1155,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_8c9bd807-4601-4d2a-bb3c-b7db0268c3a3\", \"AssistanceListingFinal.csv\", 22792620)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 173,
+      "outputs": []
     }
   ]
 }
